// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not replace class names that are not from emotion 1`] = `
".emotion-0 {
  color: darkorchid;
}

<div
  className=\\"net-42 net emotion-0\\"
/>"
`;

exports[`jest-emotion with DOM elements disabled does not replace class names or insert styles into DOM element snapshots 1`] = `
"<div
  class=\\"css-tokvmb\\"
>
  <svg
    class=\\"css-8atqhb\\"
  />
</div>"
`;

exports[`jest-emotion with DOM elements disabled replaces class names and inserts styles into React test component snapshots 1`] = `
".emotion-1 {
  color: red;
}

.emotion-0 {
  width: 100%;
}

<div
  className=\\"emotion-1\\"
>
  <svg
    className=\\"emotion-0\\"
  />
</div>"
`;

exports[`jest-emotion with dom elements replaces class names and inserts styles into DOM element snapshots 1`] = `
".emotion-1 {
  color: red;
}

.emotion-0 {
  width: 100%;
}

<div
  class=\\"emotion-1\\"
>
  <svg
    class=\\"emotion-0\\"
  />
</div>"
`;

exports[`jest-emotion with dom elements replaces class names and inserts styles into React test component snapshots 1`] = `
".emotion-1 {
  color: red;
}

.emotion-0 {
  width: 100%;
}

<div
  className=\\"emotion-1\\"
>
  <svg
    className=\\"emotion-0\\"
  />
</div>"
`;

exports[`throws nice error for invalid css 1`] = `"There was an error parsing the following css: \\".css-11cntgz{jnnjvhjevhevhb;}\\""`;
